<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:id="@+id/result_buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:background="@drawable/back"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reporter_tital"
            android:textColor="@color/grey_30"
            android:textSize="32sp" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textColor="@color/purple_200"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="left"
            tools:ignore="RtlHardcoded"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="@drawable/box"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="40dp">

    <TextView
            android:id="@+id/result_textTips0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/grey_30"
            android:textSize="21sp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/result_textTips1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/grey_30"
        android:textSize="21sp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/result_textTips2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/grey_30"
        android:textSize="21sp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/result_textTips3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/grey_30"
        android:textSize="21sp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/result_textTips4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/grey_30"
        android:textSize="21sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>